welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:3: error: not found: value Direction
  setDirection(Direction.EST) 
               ^DwarfCode:24: error: not found: value Direction
  return getDirection()==Direction.EST && estFaceMur()
                         ^