welcome.lessons.welcome.summative.Moria.scala.code
while (! boutDuTunel) {
  setDirection(Direction.EST) 
  while (! estSurBiscuit()) {
    avance()
  }
  prendBiscuit()
  retourne()
  
  
  
  
  
  
}
/*droite()
avance()
gauche()
avance()*/



def boutDuTunel () : Boolean = {
  return getDirection()==Direction.EST && estFaceMur()
}